# vmassimi-webapp

./: .gitignore  TODO.md  build_and_up.sh  docker-compose.yml
services/nginx/: Dockerfile  nginx.conf
services/nginx/var/www/: 404.html  index.html
services/nginx/var/www/css/: style.css
services/nginx/var/www/js/: clickable_script.js  inventory.js  random.js  upload.js
services/webapp/: Dockerfile  requirements.txt
services/webapp-rust/: Cargo.toml  Dockerfile  build_for_linux.sh  build_for_macos.sh  run_server.sh
services/webapp-rust/.cargo/: config
services/webapp-rust/scripts/: .gitignore  README.md  generate_images.sh  generate_permutation.py  operations.sh  run_server.sh  sanitize_directories.py  test_recipe_algo.sh  update_centos_mirrors.sh
services/webapp-rust/src/: main.rs
services/webapp-rust/src/core/: constants.rs  mod.rs
services/webapp-rust/templates/: base.html  index.html  inventory.html  random.html  sample.html  upload.html
services/webapp/app/: main.py
services/webapp/app/test-env/: pyvenv.cfg
services/webapp/src/: main.py
services/webapp/src/static/templates/: index.html
