[package]
name = "webapp-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async framework
tokio = { version = "1.21.2", features = ["full"]}
# Web server framework
axum = { version = "0.5.16", features = ["multipart"]}
# Serialization to JSON
serde = "1.0.147"
serde_json = "1.0.86"
# Tarballs
tar = "0.4.38"
flate2 = "1.0.24"
# Templating
askama = "0.11.1"

# When crosscompiling for linux, tell rustc how to find the linker
[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"