[package]
name = "webapp-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async framework
tokio = { version = "1.21.2", features = ["full"]}

# Web server framework
axum = { version = "0.5.16", features = ["multipart"]}
# Base64
base64 = '0.13.1'
# Serialization to JSON
serde = "1.0.147"
serde_json = "1.0.86"
# Tarballs
tar = "0.4.38"
flate2 = "1.0.24"
# Templating
askama = "0.11.1"
# Time
chrono = "0.4.23"
# Errors
anyhow = "1.0.66"
# Caching
# https://docs.rs/cached/latest/cached
cached = '0.40.0'
# Generic system informations
sysinfo = '0.26.8'
# Random UUID generation
uuid = {version = "1.2.2", features = ["v4","fast-rng"]}

# When crosscompiling for linux, tell rustc how to find the linker
[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"